# mcp-servers

./: .env.example  .gitignore  CLAUDE.md  DOCKER_PORTS.md  LICENSE  README.md  pyproject.toml
.claude/: .gitkeep
.github/workflows/: pages.yml  test.yml
docs/: quickstart.md  server-guide.md
examples/config/claude-desktop/: README.md  claude_desktop_config.json
examples/config/dify/: README.md  dify-mcp-settings.json
examples/data-analysis/: titanic_eda.html
examples/langquery/: README.md  titanic_eda_ja.html
scripts/: download-sample-data.sh  run-all-servers.sh
skills/xlsx/: recalc.py
src/browser/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/browser/src/browser/: __init__.py  server.py  tools.py
src/browser/tests/: conftest.py  test_tools.py
src/chroma/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/chroma/src/chroma/: __init__.py  server.py  tools.py
src/chroma/tests/: conftest.py  test_tools.py
src/composite/: .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  QUICKSTART_DOCKER.md  README.md  composite-config.example.yaml  composite-config.yaml  docker-compose.yml  pyproject.toml  test_config.py  test_loader.py  test_server.py
src/composite/src/composite/: __init__.py  __main__.py  config.py  lifespan.py  loader.py  server.py
src/composite/tests/: __init__.py  test_parse_args.py  test_server.py
src/core/: pyproject.toml
src/core/src/core/: __init__.py  cli.py  workspace.py
src/core/tests/: test_cli.py  test_workspace.py
src/data-analysis/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/data-analysis/src/data_analysis/: __init__.py  db.py  prompts.py  server.py  tools.py
src/data-analysis/tests/: conftest.py  test_prompts.py  test_tools.py
src/dify/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/dify/examples/: README.md  create_chatbot.py  simple_translator.yml
src/dify/src/dify/: __init__.py  __main__.py  prompts.py  server.py  tools.py
src/dify/tests/: conftest.py  test_tools.py
src/docx/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/docx/src/docx/: __init__.py  prompts.py  server.py  tools.py
src/docx/src/docx/scripts/: __init__.py  pack.py  unpack.py
src/docx/tests/: test_tools.py
src/file-management/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/file-management/src/file_management/: __init__.py  server.py  tools.py
src/file-management/tests/: test_tools.py
src/frontend-design/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/frontend-design/src/frontend_design/: __init__.py  prompts.py  server.py  themes.py  tools.py
src/frontend-design/tests/: test_prompts.py  test_themes.py  test_tools.py
src/google-workspace/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/google-workspace/src/google_workspace/: __init__.py  __main__.py  auth.py  server.py  tools.py
src/google-workspace/tests/: __init__.py  test_tools.py
src/img2pptx/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/img2pptx/src/img2pptx/: __init__.py  server.py  tools.py
src/img2pptx/tests/: test_tools.py
src/langquery/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/langquery/src/langquery/: db.py  server.py  tools.py
src/langquery/tests/: conftest.py  test_tools.py
src/nano-banana/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/nano-banana/src/nano_banana/: __init__.py  __main__.py  server.py  tools.py
src/nano-banana/tests/: test_tools.py
src/o3/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/o3-search/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/o3-search/src/o3_search/: server.py
src/o3/tests/: test_tools.py
src/pdf/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/pdf/src/pdf/: __init__.py  __main__.py  server.py  tools.py
src/pdf/tests/: conftest.py  test_tools.py
src/pdf/workspace/: README.md
src/playwright-browser/: README.md  package-lock.json  package.json
src/pptx/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/pptx/src/pptx_mcp/: marp.py  prompts.py  server.py
src/pptx/src/pptx_server/: __init__.py  analysis.py  html2pptx.py  marp.py  prompts.py  server.py  tools.py
src/pptx/tests/: test_tools.py
src/preview/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/preview/src/preview/: __init__.py  __main__.py  http_server.py  page_store.py  server.py  templates.py  tools.py
src/preview/tests/: test_tools.py
src/shell/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/shell/src/shell/: __init__.py  server.py  tools.py
src/shell/tests/: test_tools.py
src/skills/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  skills.yaml.example
src/skills/src/skills/: __init__.py  config.py  prompts.py  server.py  tools.py
src/skills/src/skills/core/: __init__.py  loader.py  registry.py
src/skills/tests/: conftest.py  test_loader.py  test_registry.py  test_tools.py
src/skills/tests/fixtures/: skills.yaml
src/skills/tests/fixtures/code-review/scripts/: check_style.py
src/slack/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/slack/src/slack/: __init__.py  __main__.py  server.py  tools.py
src/slack/tests/: test_server.py  test_tools.py
src/vectorstore/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/vectorstore/examples/: openai_embeddings_example.md
src/vectorstore/src/vectorstore/: __init__.py  server.py  tools.py
src/vectorstore/tests/: conftest.py  test_tools.py
src/vectorstore/workspace/: README.md
src/xlsx/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/xlsx/src/xlsx/: __init__.py  prompts.py  recalc.py  server.py  tools.py
src/xlsx/tests/: test_server.py  test_tools.py
(+28 files in other folders)
