[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser"
version = "0.1.0"
description = "a mcp server that allows clients to manipulate browser using Playwright"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.5",
    "playwright>=1.49.0",
    "python-dotenv>=1.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/browser"]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "isort>=7.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
