[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser"
version = "0.1.0"
description = "a mcp server that allows clients to manipulate browser using Playwright"
readme = "README.md"
requires-python = ">=3.12"
# Server-specific dependencies only (global deps inherited from root)
dependencies = [
    "playwright>=1.49.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/browser"]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "isort>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
