[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chroma"
version = "0.1.0"
description = "an mcp server for chromadb vector store operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "fastmcp>=2.12.5",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chroma"]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "isort>=7.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
