[project]
name = "composite"
version = "0.1.0"
description = "MCP composite server for aggregating multiple backend MCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser",
    "core",
    "data-analysis",
    "dify",
    "docx",
    "file-management",
    "frontend-design",
    "nano-banana",
    "o3-search",
    "pdf",
    "pptx",
    "preview",
    "pyyaml>=6.0",
    "shell",
    "starlette>=0.41.3",
    "vectorstore",
    "xlsx",
]

[tool.uv.sources]
browser = { workspace = true }
core = { workspace = true }
data-analysis = { workspace = true }
dify = { workspace = true }
docx = { workspace = true }
file-management = { workspace = true }
frontend-design = { workspace = true }
nano-banana = { workspace = true }
o3-search = { workspace = true }
pdf = { workspace = true }
pptx = { workspace = true }
preview = { workspace = true }
shell = { workspace = true }
vectorstore = { workspace = true }
xlsx = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/composite"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
