[project]
name = "core"
version = "0.1.0"
description = "Shared utilities for MCP servers"
requires-python = ">=3.12"
dependencies = ["starlette>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]
