[project]
name = "data-analysis"
version = "0.1.0"
description = "MCP server for data analysis using SQL queries on tabular data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "duckdb>=1.4.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/data_analysis"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
