[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dify"
version = "0.1.0"
description = "An MCP server for creating and managing Dify AI agents, workflows, and knowledge bases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.5",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.0",
    "uvicorn>=0.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dify"]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "isort>=7.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
asyncio_default_fixture_loop_scope = "function"
