[project]
name = "dify"
version = "0.1.0"
description = "MCP server for creating and managing Dify AI agents, workflows, and knowledge bases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "httpx>=0.28.1",
    "pyyaml>=6.0.0",
]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/dify"]

[dependency-groups]
dev = [
    "pytest-httpx>=0.34.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
