[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docx"
version = "0.1.0"
description = "MCP server for Word document (.docx) creation, editing, and analysis"
readme = "README.md"
requires-python = ">=3.12"
# Server-specific dependencies only (global deps inherited from root)
dependencies = [
    "defusedxml>=0.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docx"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
