[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-management"
version = "0.1.0"
description = "MCP server for file read/write operations"
readme = "README.md"
requires-python = ">=3.12"
# No server-specific dependencies (global deps inherited from root)
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/file_management"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
