[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langquery"
version = "0.1.0"
description = "a mcp server that allows clients to manipulate table data by natural language"
readme = "README.md"
requires-python = ">=3.12"
# Server-specific dependencies only (global deps inherited from root)
dependencies = [
    "duckdb>=1.4.1",
    "langchain>=1.0.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "tabulate>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langquery"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
