[project]
name = "nano-banana"
version = "0.1.0"
description = "MCP server for AI image generation using Google Gemini Nano Banana"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "google-genai>=1.0.0",
    "pillow>=11.0.0",
]

[project.scripts]
nano-banana = "nano_banana:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nano_banana"]
