[project]
name = "nano-banana"
version = "0.1.0"
description = "MCP server for AI image generation using Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "google-genai>=1.0.0",
    "pillow>=11.0.0",
]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/nano_banana"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
