[project]
name = "o3-search"
version = "0.1.0"
description = "MCP server wrapping OpenAI o3 for deep research and planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "openai>=1.0.0",
]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/o3_search"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
