[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf"
version = "0.1.0"
description = "an mcp server for pdf extraction and manipulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.5",
    "pdfplumber>=0.11.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]
create = [
    "reportlab>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf"]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "isort>=7.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
