[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf"
version = "0.1.0"
description = "an mcp server for pdf extraction and manipulation"
readme = "README.md"
requires-python = ">=3.12"
# Server-specific dependencies only (global deps inherited from root)
dependencies = [
    "pdfplumber>=0.11.0",
    "pypdf>=5.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
