[project]
name = "pdf"
version = "0.1.0"
description = "MCP server for PDF extraction and manipulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "pdfplumber>=0.11.0",
    "pypdf>=5.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/pdf"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
