[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pptx"
version = "0.1.0"
description = "an mcp server for PowerPoint presentation creation and manipulation"
readme = "README.md"
requires-python = ">=3.12"
# Server-specific dependencies only (global deps inherited from root)
dependencies = [
    "python-pptx>=1.0.0",
    "lxml>=5.0.0",
    "pillow>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pptx_server"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
