[project]
name = "pptx"
version = "0.1.0"
description = "MCP server for PowerPoint presentation creation and manipulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "frontend-design",
    "lxml>=5.0.0",
    "pillow>=10.0.0",
    "python-pptx>=1.0.0",
]

[tool.uv.sources]
core = { workspace = true }
frontend-design = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/pptx_mcp"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
