[project]
name = "preview"
version = "0.1.0"
description = "MCP server for serving HTML content with live reload for reporting and demonstrations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "starlette>=0.27.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/preview"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
