[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shell"
version = "0.1.0"
description = "MCP server for shell command execution"
readme = "README.md"
requires-python = ">=3.12"
# No server-specific dependencies (global deps inherited from root)
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/shell"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
