[project]
name = "shell"
version = "0.1.0"
description = "MCP server for shell command execution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/shell"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
