[project]
name = "skills"
version = "0.1.0"
description = "MCP server for Claude skills discovery and loading"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "python-frontmatter>=1.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/skills"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
