[project]
name = "slack"
version = "0.1.0"
description = "Slack MCP server - wraps @ubie-oss/slack-mcp-server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["core"]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/slack"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
