[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectorstore"
version = "0.1.0"
description = "an mcp server for chromadb vector store operations"
readme = "README.md"
requires-python = ">=3.12"
# Server-specific dependencies only (global deps inherited from root)
dependencies = [
    "chromadb>=0.5.0",
    "openai>=1.0.0",
    "pymupdf>=1.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vectorstore"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
