[project]
name = "vectorstore"
version = "0.1.0"
description = "MCP server for ChromaDB vector store operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "core",
    "openai>=1.0.0",
    "pymupdf>=1.24.0",
]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/vectorstore"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
