[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlsx-mcp"
version = "0.1.0"
description = "MCP server for Excel spreadsheet (.xlsx) creation, editing, and analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.5",
    "openpyxl>=3.1.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xlsx"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
